<resources>

    <string name="app_name">cuida</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="text_button_entrar">Entrar</string>
    <string name="text_tela_cadastro">Não tem conta? cadastre-se!</string>
    <string name="hint_name">Nome completo</string>
    <string name="text_cadastro">CADASTRE-SE</string>
    <string name="text_cpf">CPF</string>
    <string name="hint_data">DATA DE nascimento</string>
    <string name="hint_senhaConfirmar">Confirmar Senha</string>
    <string name="text_cadastrese">CADASTRAR</string>
    <string name="text_BemVindo">Bem Vindo</string>
    <string name="text_Procura"> O que você esta procurando? </string>
    <string name="Text_Ajuda"> Ajuda </string>
    <string name="Text_Exames"> Exames </string>
    <string name="Text_Consulta"> Consulta</string>
    <string name="Text_hospitais"> Hospitais </string>
    <string name="recupera_o">Recuperação</string>
    <string name="muscula_o">Musculação</string>
    <string name="agendar">AGENDAR</string>
    <string name="todo">TODO</string>
    <string name="tudo">TUDO</string>
    <string name="todos">TODO</string>
    <string name="msgError" />


</resources>