<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".MainActivity3Casdatro">

    <ImageView
        android:id="@+id/imagem"
        android:layout_width="127dp"
        android:layout_height="115dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/fisica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cadastro"
        android:layout_width="211dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/text_cadastro"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imagem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="126dp"/>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name"
        android:layout_width="336dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/backgroun_edittext"
        android:hint="@string/hint_name"
        android:maxLines="2"
        android:padding="15dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastro" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cpf"
        android:layout_width="336dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/backgroun_edittext"
        android:hint="@string/text_cpf"
        android:inputType="number"
        android:maxLines="2"
        android:padding="15dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/senha"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/senha"
        android:layout_width="336dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/backgroun_edittext"
        android:hint="@string/hint_senha"
        android:inputType="numberPassword"
        android:maxLines="2"
        android:padding="15dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/editSenha"
        app:layout_constraintTop_toBottomOf="@+id/cpf" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editSenha"
        android:layout_width="336dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/backgroun_edittext"
        android:hint="@string/hint_senhaConfirmar"
        android:inputType="numberPassword"
        android:maxLines="2"
        android:padding="15dp"
        android:textSize="18sp"

        app:layout_constraintTop_toBottomOf="@+id/senha"
        tools:layout_editor_absoluteX="40dp"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="124dp"
        android:background="@drawable/background_button_selector"
        android:enabled="true"
        android:padding="15dp"
        android:text="@string/text_cadastrese"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.782"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSenha" />

    <View
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:rotationX="500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastrar" />

    <ImageView
        android:id="@+id/IcVoltar"
        android:layout_width="28dp"
        android:layout_height="68dp"
        android:src="@drawable/ic_voltar"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="630dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>